Added Git repo to package.json

--- a/package.json
+++ b/package.json
@@ -11,4 +11,9 @@
   },
   "author": "Matthew Daly",
   "license": "GPLv2"
+  "repository" :
+  {
+      "type": "git",
+      "url": "git@github.com:matthewbdaly/JSBasicShell.git"
+  },
 }
