--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-jasmine": "~0.5.2"
+    "grunt-jslint": "~1.1.1",
+    "grunt-contrib-watch": "~0.5.3",
   },
   "engines": {
     "node": "0.10.x",
