--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: node_js
 node_js: 
 - "0.10"
 before_install:
- - npm install -g grunt-cli bower
+ - npm install -g grunt-cli bower istanbul
  - bower install
