--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jasmine": "~0.5.2",
-    "grunt-jslint": "~1.1.1",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt": "^0.4.5",
+    "grunt-contrib-jasmine": "^0.6.5",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-jslint": "~1.1.1"
   },
   "engines": {
     "node": "0.10.x",
