--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jasmine": "^0.6.5",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-jslint": "~1.1.1"
+    "grunt-jslint": "~1.1.1",
+    "grunt-template-jasmine-istanbul": "^0.3.0"
   },
   "engines": {
     "node": "0.10.x",
