--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jasmine": "^0.6.5",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-coveralls": "^1.0.0",
     "grunt-jslint": "~1.1.1",
     "grunt-template-jasmine-istanbul": "^0.3.0",
     "istanbul": "^0.3.2"
